# fit-query

./: pyproject.toml
src/fit_query/: console.py  database.py  parser.py
tests/: test_console.py
