[tool.poetry]
name = "fit-query"
version = "0.1.0"
description = ""
authors = ["gellertm <8151220+mgellert@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fitparse = "^1.2.0"
click = "^8.1.3"
pytz = "^2022.7.1"
peewee = "^3.15.4"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fit-query = "fit_query.console:cli"